--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100083778625398%22%3A%22Cyk1Mlsy%22%2C%2261559684571908%22%3A%22rS54FQkR%22%7D",
+        "value": "%7B%22100083778625398%22%3A%22Cyk1Mlsy%22%2C%2261559684571908%22%3A%22sK2epuzB%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.887Z",
-        "lastAccessed": "2024-05-17T10:22:20.887Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.887Z",
-        "lastAccessed": "2024-05-17T10:22:20.887Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.887Z",
-        "lastAccessed": "2024-05-17T10:22:20.887Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.887Z",
-        "lastAccessed": "2024-05-17T10:22:20.887Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.887Z",
-        "lastAccessed": "2024-05-17T10:22:20.887Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "c_user",
@@ -77,44 +86,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "xs",
-        "value": "4%3ApA3JCEW3YU1N3A%3A2%3A1715940290%3A-1%3A-1",
+        "value": "4%3APni5yWMtG6trcQ%3A2%3A1715942747%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "61559684571908",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2502%3Btimestamp%3A1715940325",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101327328%3BT%3A28599005",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "wd",
@@ -122,24 +104,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2502%3Btimestamp%3A1715942926",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101036938%3BT%3A28599048",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "fr",
-        "value": "0MXUE2he4dFT5Vhkx.AWWahlvVnjbFwZndDQdv_17eUpo.BmQ6Lv..AAA.0.0.BmRy_W.AWUufgK3zGg",
+        "value": "0MXUE2he4dFT5Vhkx.AWVrBGIb-FAFu4xjmtlY3jjWsww.BmQ6Lv..AAA.0.0.BmRzYS.AWXxKwBbZ60",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1715941335795%2C%22v%22%3A1%7D",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1715942934708%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-17T10:22:20.888Z",
-        "lastAccessed": "2024-05-17T10:22:20.888Z"
+        "creation": "2024-05-17T10:49:57.918Z",
+        "lastAccessed": "2024-05-17T10:49:57.918Z"
     }
+]
