--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "dpr",
@@ -68,17 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.450Z",
+        "lastAccessed": "2024-05-19T04:36:11.450Z"
     },
     {
         "key": "c_user",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
     },
     {
         "key": "xs",
@@ -95,35 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101339469%3BT%3A28600957",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2506%3Btimestamp%3A1716057463",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MXUE2he4dFT5Vhkx.AWWqT1R6u84-CXye8LFHMmrDCpk.BmQ6Lv..AAA.0.0.BmSPV6.AWVKo8T67bs",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
     },
     {
         "key": "m_page_voice",
@@ -131,8 +95,44 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101022377%3BT%3A28601553",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2506%3Btimestamp%3A1716093233",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MXUE2he4dFT5Vhkx.AWULuBN6uWWeIiTxJnzQoxZ03kA.BmQ6Lv..AAA.0.0.BmSYE7.AWXauEpZZc0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22lm3%22%3A%22g.25545935325054835%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1716093308528%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
     },
     {
         "key": "wd",
@@ -140,15 +140,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1716057480893%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-18T18:38:43.418Z",
-        "lastAccessed": "2024-05-18T18:38:43.418Z"
+        "creation": "2024-05-19T04:36:11.451Z",
+        "lastAccessed": "2024-05-19T04:36:11.451Z"
     }
+]
